# rust-gRPC

./: .gitignore  Cargo.toml  README.md  build.rs
diagrams/: grpc.excalidraw  rpc.excalidraw
proto/: helloworld.proto  service.proto
src/: main.rs
src/tonics/: client.rs  server.rs
